syntax = "proto3";

package sassafras.sassafras;

// This will fail because `Hello` is missing an "id" field, and we don't
// specify an alternative ID field name when we call proto2types.
message Hello {
    string name = 2;
    fixed64 snake_case = 4;
    fixed64 camelCase = 5;
    fixed64 SHOUTING_CASE = 6;
    fixed64 PascalCase = 7;
}
